--- a/config/crd/bases/dragonflydb.io_dragonflies.yaml
+++ b/config/crd/bases/dragonflydb.io_dragonflies.yaml
@@ -3597,17 +3597,13 @@ spec:
           status:
             description: DragonflyStatus defines the observed state of Dragonfly
             properties:
-              isRollingUpdate:
-                description: IsRollingUpdate is true if the Dragonfly instance is
-                  being updated
-                type: boolean
               phase:
                 description: |-
                   Status of the Dragonfly Instance
                   It can be one of the following:
-                  - "ready": The Dragonfly instance is ready to serve requests
-                  - "configuring-replication": The controller is updating the master of the Dragonfly instance
-                  - "resources-created": The Dragonfly instance resources were created but not yet configured
+                  - "Ready": The Dragonfly instance is ready to serve requests
+                  - "ResourcesCreated": The Dragonfly instance resources were created but not yet configured
+                  - "RollingUpdate": The Dragonfly instance is being updated
                 type: string
             type: object
         type: object
